Replace some pre-Java 8 idioms