@@ -16,29 +16,23 @@
 
 package com.thoughtworks.gocd.elasticagent.ecs;
 
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
 import com.thoughtworks.gocd.elasticagent.ecs.domain.Agent;
 
 import java.util.*;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 public class Agents {
 
     // Filter for agents that can be disabled safely
-    private static final Predicate<Agent> AGENT_IDLE_PREDICATE = new Predicate<Agent>() {
-        @Override
-        public boolean apply(Agent metadata) {
-            Agent.AgentState agentState = metadata.agentState();
-            return metadata.configState().equals(Agent.ConfigState.Enabled) && (agentState.equals(Agent.AgentState.Idle) || agentState.equals(Agent.AgentState.Missing) || agentState.equals(Agent.AgentState.LostContact));
-        }
+    private static final Predicate<Agent> AGENT_IDLE_PREDICATE = metadata -> {
+        Agent.AgentState agentState = metadata.agentState();
+        return metadata.configState().equals(Agent.ConfigState.Enabled) && (agentState.equals(Agent.AgentState.Idle) || agentState.equals(Agent.AgentState.Missing) || agentState.equals(Agent.AgentState.LostContact));
     };
     // Filter for agents that can be terminated safely
-    private static final Predicate<Agent> AGENT_DISABLED_PREDICATE = new Predicate<Agent>() {
-        @Override
-        public boolean apply(Agent metadata) {
-            Agent.AgentState agentState = metadata.agentState();
-            return metadata.configState().equals(Agent.ConfigState.Disabled) && (agentState.equals(Agent.AgentState.Idle) || agentState.equals(Agent.AgentState.Missing) || agentState.equals(Agent.AgentState.LostContact));
-        }
+    private static final Predicate<Agent> AGENT_DISABLED_PREDICATE = metadata -> {
+        Agent.AgentState agentState = metadata.agentState();
+        return metadata.configState().equals(Agent.ConfigState.Disabled) && (agentState.equals(Agent.AgentState.Idle) || agentState.equals(Agent.AgentState.Missing) || agentState.equals(Agent.AgentState.LostContact));
     };
     private final Map<String, Agent> agents = new HashMap<>();
 
@@ -60,11 +54,11 @@ public class Agents {
     }
 
     public Collection<Agent> findInstancesToDisable() {
-        return FluentIterable.from(agents.values()).filter(AGENT_IDLE_PREDICATE).toList();
+        return agents.values().stream().filter(AGENT_IDLE_PREDICATE).collect(Collectors.toList());
     }
 
     public Collection<Agent> findInstancesToTerminate() {
-        return FluentIterable.from(agents.values()).filter(AGENT_DISABLED_PREDICATE).toList();
+        return agents.values().stream().filter(AGENT_DISABLED_PREDICATE).collect(Collectors.toList());
     }
 
     public Set<String> agentIds() {
